overflow fixing

--- a/#src/style.scss
+++ b/#src/style.scss
@@ -70,7 +70,7 @@ html {
   color: #404040;
 }
 
-body {
+.body {
   position: relative;
   overflow: hidden;
   overflow-y: scroll;
